# macaco-ctc-12-docker

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yaml  readme.MD
src/: hash.cpp  hashfunctions.cpp
